# ipromise

./: .gitignore  README.md  README.rst  pylintrc  pyproject.toml  setup.cfg  setup.py
ipromise/: __init__.py  annotations.py  augments.py  implements.py  ipromise.py  overrides.py
ipromise/test/: common.py  test_abc.py  test_augments.py  test_implements.py  test_overrides.py
samples/: augments.py  implements.py  overrides.py
test/: common.py  test_abc.py  test_augments.py  test_implements.py  test_overrides.py
